# specious

./: .gitignore  .gitmodules  CMakeLists-additional.txt  CMakeLists-loopcanon.txt  CMakeLists.txt  LICENSE.md  README.md
CPU2006/400.perlbench/: CMakeLists.txt
CPU2006/400.perlbench/scripts/: run.sh.in
CPU2006/400.perlbench/src/: CMakeLists-additional.txt  CMakeLists.txt
CPU2006/401.bzip2/: CMakeLists.txt
CPU2006/401.bzip2/scripts/: run.sh.in
CPU2006/401.bzip2/src/: CMakeLists.txt
CPU2006/403.gcc/: CMakeLists.txt
CPU2006/403.gcc/scripts/: run.sh.in
CPU2006/403.gcc/src/: CMakeLists.txt
CPU2006/429.mcf/: CMakeLists.txt
CPU2006/429.mcf/scripts/: run.sh.in
CPU2006/429.mcf/src/: CMakeLists.txt
CPU2006/433.milc/: CMakeLists.txt
CPU2006/433.milc/scripts/: run.sh.in
CPU2006/433.milc/src/: CMakeLists.txt
CPU2006/444.namd/: CMakeLists.txt
CPU2006/444.namd/scripts/: run.sh.in
CPU2006/444.namd/src/: CMakeLists.txt
CPU2006/445.gobmk/: CMakeLists.txt
CPU2006/445.gobmk/scripts/: run.sh.in
CPU2006/445.gobmk/src/: CMakeLists.txt
CPU2006/447.dealII/: CMakeLists.txt
CPU2006/447.dealII/scripts/: run.sh.in
CPU2006/447.dealII/src/: CMakeLists.txt
CPU2006/450.soplex/: CMakeLists.txt
CPU2006/450.soplex/scripts/: run.sh.in
CPU2006/450.soplex/src/: CMakeLists.txt
CPU2006/453.povray/: CMakeLists.txt
CPU2006/453.povray/scripts/: run.sh.in
CPU2006/456.hmmer/: CMakeLists.txt
CPU2006/456.hmmer/scripts/: run.sh.in
CPU2006/456.hmmer/src/: CMakeLists.txt
CPU2006/458.sjeng/: CMakeLists.txt
CPU2006/458.sjeng/scripts/: run.sh.in
CPU2006/458.sjeng/src/: CMakeLists.txt
CPU2006/462.libquantum/: CMakeLists.txt
CPU2006/462.libquantum/scripts/: run.sh.in
CPU2006/462.libquantum/src/: CMakeLists.txt
CPU2006/464.h264ref/: CMakeLists.txt
CPU2006/464.h264ref/scripts/: run.sh.in
CPU2006/464.h264ref/src/: CMakeLists.txt
CPU2006/470.lbm/: CMakeLists.txt
CPU2006/470.lbm/scripts/: run.sh.in
CPU2006/470.lbm/src/: CMakeLists.txt
CPU2006/471.omnetpp/: CMakeLists.txt
CPU2006/471.omnetpp/scripts/: run.sh.in
CPU2006/471.omnetpp/src/: CMakeLists.txt
CPU2006/473.astar/: CMakeLists.txt
CPU2006/473.astar/scripts/: run.sh.in
CPU2006/473.astar/src/: CMakeLists.txt
CPU2006/482.sphinx3/: CMakeLists.txt
CPU2006/482.sphinx3/scripts/: run.sh.in
CPU2006/482.sphinx3/src/: CMakeLists.txt
CPU2006/483.xalancbmk/: CMakeLists.txt
CPU2006/483.xalancbmk/scripts/: run.sh.in
CPU2006/483.xalancbmk/src/: CMakeLists.txt
CPU2006/scripts/preamble/: Callgrind_preamble.sh.in  preamble.sh.in
cmake/: FindLLVMPolly.cmake  Specious-Utils.cmake  Specious-Version.cmake
cmake/fragments/: BasicBitcodeGen.cmake  BasicFragment.cmake  BmkBasicInstall.cmake  CMakeLists-install.txt  CMakeLists-loopcanon.txt  LoopC14N.cmake
cmake/pipelines/: AnnotateLoops.cmake  ApplyIOAttribute.cmake  BasicBitcodeGen.cmake  BmkBasicInstall.cmake  Callgrind.cmake  ClassifyLoops.cmake  ClassifyLoopsWithId.cmake  ClassifyLoopsWithId2.cmake  DecoupleLoopsFront.cmake  LoopC14N.cmake  LoopExtractAnnotationMapping.cmake  LoopRuntimeProfiler.cmake  LoopRuntimeProfilerDepth.cmake  LoopRuntimeProfilerSCCTiming.cmake  LoopRuntimeProfilerTiming.cmake  MixedPropagateAttributes.cmake  Polly.cmake  PollyWithId.cmake  PropagateAttributes.cmake  SimplifyLoopExits.cmake  SimplifyLoopExitsFront.cmake  SimplifyLoopExitsFrontIterative.cmake  SimplifyLoopExitsWithId.cmake  TerraceDLFMemProfiler.cmake  TerraceMemProfiler.cmake
config/pipelines/: all.txt  annotateloops.txt  callgrind.txt  decoupleloopsfront.txt  loopextract-al-map.txt  loopruntimeprofiler_depth_with_al_slef.txt  loopruntimeprofiler_scc_timing_with_al.txt  polly.txt  polly_with_id.txt  slef.txt  slefi.txt  terracedlfmemprofiler.txt  terracememprofiler.txt
config/sets/groups/: all.txt  all_except_fortran.txt
config/sets/samples/: ccpp_q1.txt
config/sets/single/: hmmer.txt  namd.txt  sjeng.txt
configs/: all_cpp.txt  all_except_fortran.txt  all_fortran.txt  bzip2.txt  config_all.txt  fp.txt  gcc.txt  int_except_fortran.txt  sample_mix01.txt
configs/pipelines/: all.txt  callgrind.txt  classifyloops_with_al_slef.txt  loopc14n.txt  loopruntimeprofiler_timing_with_al_slef.txt  loopruntimeprofiler_with_al_slef.txt  sle.txt  slefi.txt
configs/sets/groups/: all_c.txt  fp_except_fortran.txt
configs/sets/samples/: ccpp_q2.txt  ccpp_q3.txt  ccpp_q4.txt  sample_c.txt
configs/sets/single/: lbm.txt  mcf.txt
doc/: harness.md
utils/invocations/ref/: 433.milc.ref.cmd  445.gobmk.ref.cmd  483.xalancbmk.ref.cmd
utils/invocations/test/: 445.gobmk.test.cmd  483.xalancbmk.test.cmd
utils/reports/cxx-user-function-whitelists/: 444.namd.bmk_functions.txt  447.dealII.bmk_functions.txt  450.soplex.bmk_functions.txt  450.soplex_functions_all.txt  453.povray_functions.txt  471.omnetpp.bmk_functions.txt  473.astar.bmk_functions.txt  483.xalancbmk_functions.txt
utils/reports/project-files/: 400.perlbench.project_files.txt  401.bzip2.project_files.txt  403.gcc_project_files.txt  429.mcf.project_files.txt  433.milc.project_files.txt  444.namd.project_files.txt  445.gobmk.project_files.txt  447.dealII_project_files.txt  450.soplex_project_files.txt  453.povray_project_files.txt  456.hmmer.project_files.txt  458.sjeng_project_files.txt  462.libquantum_project_files.txt  464.h264ref_project_files.txt  470.lbm.project_files.txt  471.omnetpp_project_files.txt  473.astar.project_files.txt  482.sphinx3.project_files.txt  483.xalancbmk_project_files.txt
utils/scripts/: build-llvm-loopcanon.sh  create-additional-link.sh  list-project-files.sh  run-benchmarks.sh  run-llvm-opt-passes.sh  symlink-bmk-src-dir.sh
utils/scripts/build_tree/: install-bmks.sh  print_llvmir_functions.sh  run-llvm-opt-passes.sh  simplifyloopexitsfront-iterative-build-update.sh  suite-install-data.sh
utils/scripts/install_tree/: run-benchmarks.sh  run-suite.sh  suite-perf-dot-generate.sh  suite-run-amplxe.sh  suite-run.sh
utils/scripts/source_tree/: build-gcc-O2-perf.sh  build-gcc-O2.sh  build-icc.sh  build-llvm-aioattr.sh  build-llvm-annotloops.sh  build-llvm-callgrind.sh  (+29 more)
(+2 files in other folders)
